--- a/simple-web-template/simple-web-template.csproj
+++ b/simple-web-template/simple-web-template.csproj
@@ -143,6 +143,7 @@
     <Compile Include="App_Start\Startup.cs" />
     <Compile Include="Common\Md5Extentions.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
